<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="11dp">

    <TextView
        android:id="@+id/lblTitulo"
        android:layout_width="114dp"
        android:layout_height="37dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif"
        android:text="@string/Titulo"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtTelefone"
        android:layout_width="217dp"
        android:layout_height="51dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/Telefone"
        android:inputType="phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNome" />

    <EditText
        android:id="@+id/txtNome"
        android:layout_width="217dp"
        android:layout_height="48dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/Nome"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblTitulo" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="218dp"
        android:layout_height="48dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTelefone" />

    <Button
        android:id="@+id/btnAdicionar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/Inserir"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail" />

    <Button
        android:id="@+id/btnAlt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/alt"
        app:layout_constraintStart_toEndOf="@+id/btnAdicionar"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail" />

    <Button
        android:id="@+id/btnDel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="20dp"
        android:text="@string/Del"
        app:layout_constraintStart_toEndOf="@+id/btnAlt"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail" />

    <ListView
        android:id="@+id/ltvContatos"
        android:layout_width="290dp"
        android:layout_height="234dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="47dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAdicionar" />

    <Button
        android:id="@+id/bntLista"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="328dp"
        android:text="@string/Lista"
        app:layout_constraintStart_toEndOf="@+id/btnDel"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>